refactor: refactor endpoints to meet specified requirements of accepting payment reference
