# internal/interfaces/rest/handlers/refund.go
@@ -5,7 +5,6 @@ import (
 	"net/http"
 
 	"github.com/DanielPopoola/ficmart-payment-gateway/internal/api"
-	"github.com/DanielPopoola/ficmart-payment-gateway/internal/application/services"
 	"github.com/DanielPopoola/ficmart-payment-gateway/internal/interfaces/rest"
 )
 
@@ -16,12 +15,8 @@ func (h *Handlers) RefundPayment(
 	req := request.Body
 	idempotencyKey := request.Params.IdempotencyKey
 
-	cmd := services.RefundCommand{
-		PaymentID: req.PaymentId.String(),
-		Amount:    req.Amount,
-	}
-
-	payment, err := h.refundService.Refund(ctx, cmd, idempotencyKey)
+	paymentID := req.PaymentId.String()
+	payment, err := h.refundService.Refund(ctx, paymentID, idempotencyKey)
 	if err != nil {
 		return mapRefundServiceErrorToAPIResponse(ctx, err)
 	}
